// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should render correct size when size is: heading 1`] = `
<Text
  baseline={true}
  heading={true}
  raw={true}
  regular={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.5
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="heading"
      svgClassName="headingStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="heading"
      svgClassName="headingStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="heading"
      svgClassName="headingStar"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      size="heading"
      svgClassName="headingStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="heading"
      svgClassName="headingStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: heading and rating text is shown 1`] = `
<Text
  baseline={true}
  heading={true}
  raw={true}
  regular={true}
>
  <ScreenReaderOnly
    component="span"
  >
    4
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="heading"
      svgClassName="headingStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="heading"
      svgClassName="headingStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="heading"
      svgClassName="headingStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      size="heading"
      svgClassName="headingStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="heading"
      svgClassName="headingStar scaledDownSvg"
    />
    <span
      className="textRating"
    >
      4
    </span>
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: substandard 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.5
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="substandardStar"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: substandard and rating text is shown 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    4
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="substandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      size="substandard"
      svgClassName="substandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="substandard"
      svgClassName="substandardStar scaledDownSvg"
    />
    <span
      className="textRating"
    >
      4
    </span>
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: superstandard 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  superstandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.5
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="superstandard"
      svgClassName="superstandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="superstandard"
      svgClassName="superstandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="superstandard"
      svgClassName="superstandardStar"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      size="superstandard"
      svgClassName="superstandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="superstandard"
      svgClassName="superstandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct size when size is: superstandard and rating text is shown 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  superstandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    4
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="superstandard"
      svgClassName="superstandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="superstandard"
      svgClassName="superstandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="superstandard"
      svgClassName="superstandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      size="superstandard"
      svgClassName="superstandardStar scaledDownSvg"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="superstandard"
      svgClassName="superstandardStar scaledDownSvg"
    />
    <span
      className="textRating"
    >
      4
    </span>
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 0 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    0
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={false}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="2"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="3"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 2.74 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    2.74
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <Icon
      className="star"
      key="2"
      markup="mock svg"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="3"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 2.75 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    2.75
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="3"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 3.74 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.74
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="substandardStar"
    />
    <Icon
      className="star"
      key="3"
      markup="mock svg"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 3.75 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    3.75
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={false}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render correct star rating when rating is: 5 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    5
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render with className 1`] = `
<Text
  baseline={true}
  className="root-class-name"
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    5
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      size="substandard"
      svgClassName="substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="4"
      size="substandard"
      svgClassName="substandardStar"
    />
  </span>
</Text>
`;

exports[`Rating should render with starClassName 1`] = `
<Text
  baseline={true}
  raw={true}
  regular={true}
  substandard={true}
>
  <ScreenReaderOnly
    component="span"
  >
    5
     out of 5
  </ScreenReaderOnly>
  <span
    className="rating"
  >
    <StarIcon
      className="star"
      filled={true}
      key="0"
      size="substandard"
      svgClassName="star-class-name substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="1"
      size="substandard"
      svgClassName="star-class-name substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="2"
      size="substandard"
      svgClassName="star-class-name substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="3"
      size="substandard"
      svgClassName="star-class-name substandardStar"
    />
    <StarIcon
      className="star"
      filled={true}
      key="4"
      size="substandard"
      svgClassName="star-class-name substandardStar"
    />
  </span>
</Text>
`;
